[gd_scene load_steps=6 format=2]

[ext_resource path="res://World/GardenWorld.gd" type="Script" id=1]
[ext_resource path="res://navdi2/Resources/fff.png" type="Texture" id=2]
[ext_resource path="res://World/cell_cursor.gd" type="Script" id=3]
[ext_resource path="res://World/LogEntry/LogHandler.gd" type="Script" id=4]
[ext_resource path="res://World/LogEntry/Entry.tscn" type="PackedScene" id=5]

[node name="GardenWorld" type="Node2D"]
script = ExtResource( 1 )

[node name="DEAD_DRIFTERS" type="Node2D" parent="."]

[node name="DRIFTERS" type="YSort" parent="."]

[node name="TileMap" type="TileMap" parent="."]
cell_size = Vector2( 10, 10 )
format = 1

[node name="Sprite" type="Sprite" parent="."]

[node name="cell_cursor" type="Node2D" parent="."]
z_index = 10
script = ExtResource( 3 )

[node name="fff" type="Sprite" parent="cell_cursor"]
modulate = Color( 1, 1, 1, 0.156863 )
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 2 )

[node name="fff2" type="Sprite" parent="cell_cursor"]
modulate = Color( 1, 1, 1, 0.156863 )
position = Vector2( 5, 5 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="UpdateRarity" type="Timer" parent="."]
autostart = true

[node name="LogHandler" type="Node2D" parent="."]
z_index = 5
script = ExtResource( 4 )
LogEntry = ExtResource( 5 )

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="UpdateRarity" to="LogHandler" method="_on_UpdateRarity_timeout"]
